--- a/AboutMyTeam.html
+++ b/AboutMyTeam.html
@@ -17,14 +17,14 @@
 </style>
 <script src=""></script>
 <body>
-
+<!-- Group member 1 Information-->
 <img src="profile-42914__340.webp" alt="LA" style="width:100px; height:100px; ">
 
 <h2>My Name is :</h2>
 <p>My major is :</p>
 <p>My Hobbies are :</p>
 <hr><br>
-
+<!-- Group member 2 Information-->
 <img src="profile-42914__340.webp" alt="LA" style="width:100px; height:100px; ">
 
 <h2>My Name is :</h2>
